[package]
name = "qlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
flume = { version = "0.11.0", default-features = false }
strum = { version = "0.26.1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
